# CodeAgents

./: .gitignore  Cargo.toml  README.md  feature_requests.md  models_to_pull  pyproject.toml  set_version  useful_links
.cursor/: .cursorignore
config/: lsp.toml  model_registry.toml  models.toml  tools.toml
config/model_params/: gemma4-31b.toml  gemma4-e4b-mlx-bf16.toml  gpt-oss-20b.toml  granite4.1-30b.toml  qwen2.5-coder-7b.toml
crates/terminal-agent/: Cargo.toml
crates/terminal-agent/src/: api.rs  main.rs  services.rs  tui.rs
crates/tool-host/: Cargo.toml
debug_output/: debug_models.py  debug_single.py  gemma4_31b.json  gpt-oss_20b.json  model_debug.ipynb  qwen2.5-coder_7b.json  qwen3.6_27b-coding-nvfp4.json  text.txt
docs/: adding_models.md  architecture.md  gui-architecture.md  indexing.md  interaction.md  local-inference-service.md  runtime.md  services_manager.md  speech-future-plan.md  terminal_cli.md
docs/papers/: 2310.08560.md  2402.14207.md  2404.16130.md  2405.14831.md  2410.05779.md  2503.09516.md  INDEX.md  deep-research-digest.md
docs/research/: AGENT_SYSTEMS_READING_LIST.md
evals/: local_agent_eval.jsonl  manifest.toml
extensions/codeagents-diff/: README.md  package-lock.json  package.json
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.css  App.tsx
registry/: lsp.toml  mcp.toml  permissions.toml  system_prompts.json  system_prompts.sources.md
registry/model_params/: README.md  (+7 more)
scripts/: download_benchmarks.sh  install.sh  install_app.sh  migrate_chats_to_folders.py  package_dmg.sh  refactor_codemod.py  update.sh
tests/: test_agent_mode_permissions.py  test_auto_recall.py  test_budget_preview.py  test_chat_attachments.py  test_chat_rag.py  test_chat_store_global.py  test_code_context_tool.py  test_console_tools.py  test_edit_file_diagnostics.py  test_evals_manifest.py  test_indexer.py  test_kg_indexer.py  test_kg_store.py  test_kg_tools.py  test_lsp_config_and_handler.py  test_lsp_manager.py  test_lsp_tools.py  test_mcp_adapter_and_bridge.py  test_mcp_server_entrypoint.py  test_metrics_sampler.py  test_mode_tool_filter.py  test_plan_store_and_tools.py  test_platform_and_tools_registry.py  test_research_endpoints.py  test_research_store.py  test_research_tools.py  test_resource_metrics.py  test_schemas_meta_and_schema.py  test_server_chats_crud.py  test_server_cors.py  test_server_gui_static.py  test_stream_context_usage.py  test_stream_events.py  test_stream_events_all.py  test_summarisation.py  test_system_prompts_registry.py  test_token_counter.py  test_tool_descriptions.py  test_web_tools.py  test_workspace_cd.py
tmp/: chat.json  chat.py  content.py  message.py
(+150 files in other folders)
