[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codeagents"
version = "0.1.0"
description = "Local coding and chat agents for OpenAI-compatible local runtimes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "pydantic>=2",
]

[project.scripts]
codeagents = "codeagents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
