[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codeagents"
version = "3.1.1"
description = "Local coding and chat agents for OpenAI-compatible local runtimes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "httpx>=0.27",
  "mcp>=1.8",
  "pydantic>=2",
]

[project.scripts]
codeagents = "codeagents.cli:main"
codeagents-mcp = "codeagents.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
