[package]
name = "codeagents-terminal"
version = "0.1.0"
edition = "2024"
description = "Terminal-first local coding agent UI for CodeAgents."

[[bin]]
name = "ca"
path = "src/main.rs"

[[bin]]
name = "ca-services"
path = "src/services.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"
